-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.2.0-beta
-
None
-
QtCreator 2.1.83 (Windows 7 Ultimate)
-
4150e14399379154f60f465a3ed82b3851dc4586
When trying to deploy Qt project to Maemo5 device (and the 'Skip packaging step' option is selected), the deployment process fails (message 'Failed to copy file..'). Deployment succeeds in case package is selected for deployment ('Skip packaging step' unchecked).