Maemo: Manually create directories when deploying without packaging.

Task-number: QTCREATORBUG-4398